--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
-<!DOCTYPE html>                      <!-- Declares this is an HTML5 document -->
-<html lang="en">                     <!-- Root element, lang="en" specifies English language -->
-<head>                               <!-- Contains metadata about the page (not visible) -->
-  <meta charset="UTF-8">             <!-- Sets character encoding for special characters -->
-  <title>Module 1</title>            <!-- Title that appears in browser tab -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">  <!-- Load Google Fonts -->
-  <link rel="stylesheet" href="style.css">  <!-- Links to our CSS file for styling -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Violet Hyun's Website</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>                               <!-- Contains all visible content on the page -->
-  <header>                           <!-- Header section for navigation/branding -->
-    <div class="left">Columbia GSAPP</div>  <!-- Left side of header with institution name -->
-    <div class="center">             <!-- Center section of header -->
-      Computational Design Practices<br>    <!-- Main title with line break -->
-      <span>Project Archive</span>   <!-- Subtitle in smaller text -->
+<body>
+  <header>
+    <div class="left">Columbia GSAPP</div>
+    <div class="center">
+      Computational Design Practices<br />
+      <span>Project Archive</span>
     </div>
-    <div class="right"><a href="#">About</a></div>  <!-- Right side with navigation link -->
+    <div class="right">
+      <a href="#main">Main</a>
+      <a href="#about">About</a>
+    </div>
   </header>
 
-  <main>                             <!-- Main content area of the page -->
-    <div class="project-meta">2025</div>     <!-- Project year/date -->
-    <div class="project-title">Violet's Website</div>  <!-- Main project title -->
-    <div class="project-subtitle">Violet Hyun</div>  <!-- Student name as subtitle -->
-    
-    <!-- Content sections -->
-    <div class="section-title">Interactive Demo</div>  <!-- Section heading -->
-    <p>Click the button below to see JavaScript in action:</p>  <!-- Instructions for user -->
-    <button id="demoButton">Click Me!</button>  <!-- Interactive button with unique ID -->
-    <div id="messageDisplay"></div>  <!-- Empty container for JavaScript to fill with messages -->
+  <main id="main">
+    <div class="project-meta">2025</div>
+    <div class="project-title">Violet Hyun's Website</div>
+    <div class="project-subtitle">A cozy minimal digital space</div>
+
+    <div class="section">
+      <p>Welcome to my website. This is a simple archive of my projects and thoughts under Columbia GSAPP's Computational Design Practices.</p>
+    </div>
   </main>
-  
-  <script src="script.js"></script>  <!-- Links to our JavaScript file for interactivity -->
+
+  <section id="about">
+    <div class="project-title">About Violet Hyun</div>
+    <div class="section">
+      <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
+    </div>
+  </section>
 </body>
 </html>
