--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <div class="section">
       <p>Welcome to my website. This is a simple archive of my projects and thoughts under Columbia GSAPP's Computational Design Practices.</p>
     </div>
+
+    <div class="section-title">Interactive Demo</div>
+    <p>Click the button below to see JavaScript in action:</p>
+    <button id="demoButton">Click Me!</button>
+    <div id="messageDisplay"></div>
   </main>
 
   <section id="about">
@@ -35,5 +40,7 @@
       <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
     </div>
   </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
