--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
     <div class="left">Columbia GSAPP</div>
     <div class="center">
       Computational Design Practices<br />
-      <span>Project Archive</span>
+      <span>Computational Design Workflows</span>
     </div>
     <div class="right">
-      <a href="#main">Main</a>
-      <a href="#about">About</a>
+      <a href="#" id="mainTab">Main</a>
+      <a href="#" id="aboutTab">About</a>
     </div>
   </header>
 
-  <main id="main">
+  <main id="mainSection">
     <div class="project-meta">2025</div>
     <div class="project-title">Violet Hyun's Website</div>
-    <div class="project-subtitle">A cozy minimal digital space</div>
 
     <div class="section">
-      <p>Welcome to my website. This is a simple archive of my projects and thoughts under Columbia GSAPP's Computational Design Practices.</p>
+      <p>I am a multimedia artist who visualizes data into tangible projects.
+
+      My mission is to assist audiences to push shadows of unconscious information consumption to a mindful awareness. 
+
+      Through collaborative exchange of ideas, I hope to nudge my audiences out of their filter bubbles through a mindful awareness.</p>
     </div>
 
     <div class="section-title">Interactive Demo</div>
@@ -34,10 +37,10 @@
     <div id="messageDisplay"></div>
   </main>
 
-  <section id="about">
+  <section id="aboutSection" style="display: none;">
     <div class="project-title">About Violet Hyun</div>
     <div class="section">
-      <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
+      <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts and a first-year student studying Computational Design Practices at Columbia University. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
     </div>
   </section>
 
