--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <span>Computational Design Workflows</span>
     </div>
     <div class="right">
-      <a href="#" id="mainTab">Main</a>
+      <a href="#" id="mainTab" class="active">Main</a>
       <a href="#" id="aboutTab">About</a>
     </div>
   </header>
 
-  <main id="mainSection">
+  <main id="mainSection" class="visible">
     <div class="project-meta">2025</div>
     <div class="project-title">Violet Hyun's Website</div>
 
@@ -37,7 +37,7 @@
     <div id="messageDisplay"></div>
   </main>
 
-  <section id="aboutSection" style="display: none;">
+  <section id="aboutSection">
     <div class="project-title">About Violet Hyun</div>
     <div class="section">
       <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts and a first-year student studying Computational Design Practices at Columbia University. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
