--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="section">
       <p>I am a multimedia artist who visualizes data into tangible projects.
 
-      My mission is to assist audiences to push shadows of unconscious information consumption to a mindful awareness. 
+      My mission is to assist audiences to push shadows of unconscious information consumption to a mindful awareness.
 
       Through collaborative exchange of ideas, I hope to nudge my audiences out of their filter bubbles through a mindful awareness.</p>
     </div>
@@ -40,6 +40,7 @@
   <section id="aboutSection">
     <div class="project-title">About Violet Hyun</div>
     <div class="section">
+      <!-- ✅ Make sure your image is in the SAME folder as index.html -->
       <img src="IMG_7764.JPG" alt="Violet Hyun" class="about-image" />
       <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts and a first-year student studying Computational Design Practices at Columbia University. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
     </div>
