--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="project-title">About Violet Hyun</div>
     <div class="section">
       <!-- ✅ Make sure your image is in the SAME folder as index.html -->
-      <img src="IMG_7764.jpeg" alt="Violet Hyun" class="about-image" />
+      <img src="./IMG_7764.jpeg" alt="Violet Hyun" class="about-image" />
       <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts and a first-year student studying Computational Design Practices at Columbia University. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
     </div>
   </section>
