--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="right">
       <a href="#" id="mainTab" class="active">Main</a>
       <a href="#" id="aboutTab">About</a>
+      <a href="#" id="assignmentTab">Assignments</a>
+
     </div>
   </header>
 
@@ -40,9 +42,25 @@
   <section id="aboutSection">
     <div class="project-title">About Violet Hyun</div>
     <div class="section">
-      <!-- ✅ Make sure your image is in the SAME folder as index.html -->
       <img src="./IMG_7764.jpeg" alt="Violet Hyun" class="about-image" />
       <p>Violet Hyun is a multimedia artist with a degree in BFA Interactive Media Arts at New York University Tisch School of the Arts and a first-year student studying Computational Design Practices at Columbia University. She is an active researcher, programmer, and a designer who is interested in data art and assistive technology.</p>
+    </div>
+  </section>
+ 
+  <section id="assignmentSection">
+    <div class="project-title">Computational Design Workflows</div>
+    <div class="section">
+      <p>2D Spatial Canvases:<br>
+  <a href="https://editor.p5js.org/vhyunn/full/TvUqEx6lo" target="_blank">
+    View 2D Sketch
+  </a>
+</p>
+      <p>3D Spatial Canvases:<br>
+  <a href="https://editor.p5js.org/vhyunn/sketches/yyctgr9yY" target="_blank">
+    View 3D Sketch
+  </a>
+</p>
+
     </div>
   </section>
 
