--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
     View 3D Sketch
   </a>
 </p>
+      <p>Temporal Structures:<br>
+  <a href="github.com/sh4771/assn4" target="_blank">
+    View Temporal Structures
+  </a>
+</p>
 
     </div>
   </section>
