--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
     View Temporal Structures
   </a>
 </p>
+      <p>Relational Structures: <br>
+  <a href="https://sh4771.github.io/assn5_relationalstructures/" target="_blank">
+    View Relational Structures
+  </a>
+</p>
+
+      <p>Geospatial Structures: <br>
+  <a href="https://sh4771.github.io/assn6/" target="_blank">
+    View Geospatial Structures
+  </a>
+</p>
+
+      <p>Engagement Components: <br>
+  <a href="https://sh4771.github.io/assn7/" target="_blank">
+    View Engagement Components
+  </a>
+</p>
 
     </div>
   </section>
