--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/addons/p5.sound.min.js"></script>
   <meta charset="UTF-8" />
   <title>Violet Hyun's Website</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
@@ -52,6 +54,7 @@
     <div class="section">
       <p>2D Spatial Canvases:<br>
   <a href="https://editor.p5js.org/vhyunn/full/TvUqEx6lo" target="_blank">
+    <div id = "canvas-1" ></div>
     View 2D Sketch
   </a>
 </p>
@@ -87,5 +90,7 @@
   </section>
 
   <script src="script.js"></script>
+
+  <script src="p5-canvas.js"></script>
 </body>
 </html>
